# llm-council

./: .gitignore  BUG_FIXES.md  CLI_AUTH.md  COMMANDS.md  CONTRIBUTING.md  INSTALLATION.md  PR_MESSAGE.md  README.md  README_CLAUDE_CODE_COUNCIL.md  install.sh  pyproject.toml  verify_bugfixes.py
.claude-plugin/: plugin.json
agents/: api-sentinel.md  evolution-guardian.md  reuse-hunter.md  security-guardian.md  synthesizer.md
agents/refactoring/: architecture-analyst.md  complexity-analyzer.md  dependency-mapper.md  risk-assessor.md  ux-continuity-guardian.md
commands/: council-agent-config.md  council-agent-create.md  council-architectural.md  council-config.md  council-dashboard.md  council-feature.md  council-history.md  council-refactor-plan.md  council-trivial.md  council.md
hooks/: hooks.json
llm-council/: __main__.py  cli.py
llm-council/adapters/: claude_adapter.py
llm_council/: .gitignore  .version.py  API_KEYS.md  CHANGELOG.md  EXAMPLES.md  INSTALL.md  INSTALL_PIPX.md  QUICKSTART.md  README.md  UPDATE_GUIDE.md  __init__.py  __main__.py  cli.py  config.yaml  pyproject.toml  requirements.txt
llm_council/adapters/: __init__.py  base.py  claude_adapter.py  gemini_adapter.py  openrouter_adapter.py
llm_council/auth/: __init__.py  cli_session_manager.py
llm_council/core/: __init__.py  council.py  synthesizer.py
llm_council/tests/: conftest.py
llm_council/tests/integration/: test_cli_entrypoints.py  test_council.py  test_installation.py
llm_council/tests/unit/: test_adapter_auth_flow.py  test_adapters.py  test_cli_auth.py  test_cli_auth_bugfixes.py  test_env_loader.py  test_pipx_paths.py  test_synthesizer.py
llm_council/utils/: __init__.py  env_loader.py  pipx_paths.py
templates/: basic-reviewer.md  budget-tracker.md  evidence-based-reviewer.md  hybrid-reviewer.md  refactoring-plan-template.md  specialized-domain.md
